# parnuan_assignment

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml
data/: dataset.jsonl
reports/: eval_report.md  tiered_report.md
src/: eval.py  ner.py  tiered.py
