[project]
name = "parnuan-ner"
version = "0.1.0"
description = "Thai text -> transaction NER system (Parnuan take-home)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
